@@ -2341,6 +2341,7 @@ void generate_server_gpustatus_smi(
     MXMLFromString(&EP, dataptr, &Tail, Emsg, sizeof(Emsg));
     copy_to_end_of_dynamic_string(gpu_status, "timestamp=");
     append_dynamic_string(gpu_status, EP->Val);
+    MXMLDestroyE(&EP);
     }
   else
     {
@@ -2352,6 +2353,7 @@ void generate_server_gpustatus_smi(
     MXMLFromString(&EP, dataptr, &Tail, Emsg, sizeof(Emsg));
     copy_to_end_of_dynamic_string(gpu_status, "driver_ver=");
     append_dynamic_string(gpu_status, EP->Val);
+    MXMLDestroyE(&EP);
     }
   else
     {
@@ -2375,10 +2377,10 @@ void generate_server_gpustatus_smi(
         {
         gpuid++;
         }
+      MXMLDestroyE(&EP);
       
       if (MOMNvidiaDriverVersion == 260)
         {
-        gpuid = atoi(EP->AVal[0]);
         /* Get and add mode rules information for driver 260 */
         
         if (!have_modes)
@@ -2436,6 +2438,7 @@ void generate_server_gpustatus_smi(
           MXMLFromString(&EP, dataptr, &Tail, Emsg, sizeof(Emsg));
           copy_to_end_of_dynamic_string(gpu_status, "gpu_pci_device_id=");
           append_dynamic_string(gpu_status, EP->Val);
+          MXMLDestroyE(&EP);
           }
         else
           {
@@ -2448,6 +2451,7 @@ void generate_server_gpustatus_smi(
           MXMLFromString(&EP, dataptr, &Tail, Emsg, sizeof(Emsg));
           copy_to_end_of_dynamic_string(gpu_status, "gpu_pci_location_id=");
           append_dynamic_string(gpu_status, EP->Val);
+          MXMLDestroyE(&EP);
           }
         else
           {
@@ -2460,6 +2464,7 @@ void generate_server_gpustatus_smi(
           MXMLFromString(&EP, dataptr, &Tail, Emsg, sizeof(Emsg));
           copy_to_end_of_dynamic_string(gpu_status, "gpu_display=");
           append_dynamic_string(gpu_status, EP->Val);
+          MXMLDestroyE(&EP);
           }
         else
           {
@@ -2472,6 +2477,7 @@ void generate_server_gpustatus_smi(
           MXMLFromString(&EP, dataptr, &Tail, Emsg, sizeof(Emsg));
           copy_to_end_of_dynamic_string(gpu_status, "gpu_temperature=");
           append_dynamic_string(gpu_status, EP->Val);
+          MXMLDestroyE(&EP);
           }
         else
           {
@@ -2484,6 +2490,7 @@ void generate_server_gpustatus_smi(
           MXMLFromString(&EP, dataptr, &Tail, Emsg, sizeof(Emsg));
           copy_to_end_of_dynamic_string(gpu_status, "gpu_fan_speed=");
           append_dynamic_string(gpu_status, EP->Val);
+          MXMLDestroyE(&EP);
           }
         else
           {
@@ -2496,6 +2503,7 @@ void generate_server_gpustatus_smi(
           MXMLFromString(&EP, dataptr, &Tail, Emsg, sizeof(Emsg));
           copy_to_end_of_dynamic_string(gpu_status, "gpu_utilization=");
           append_dynamic_string(gpu_status, EP->Val);
+          MXMLDestroyE(&EP);
           }
         else
           {
@@ -2507,6 +2515,7 @@ void generate_server_gpustatus_smi(
           MXMLFromString(&EP, dataptr, &Tail, Emsg, sizeof(Emsg));
           copy_to_end_of_dynamic_string(gpu_status, "gpu_memory_utilization=");
           append_dynamic_string(gpu_status, EP->Val);
+          MXMLDestroyE(&EP);
           }
         else
           {
@@ -2521,6 +2530,7 @@ void generate_server_gpustatus_smi(
             MXMLFromString(&EP, tmpptr1, &Tail, Emsg, sizeof(Emsg));
             copy_to_end_of_dynamic_string(gpu_status, "gpu_single_bit_ecc_errors=");
             append_dynamic_string(gpu_status, EP->Val);
+            MXMLDestroyE(&EP);
             }
           
           if ((tmpptr1 = strstr(dataptr, "<double_bit>")) != NULL)
@@ -2529,6 +2539,7 @@ void generate_server_gpustatus_smi(
             MXMLFromString(&EP, tmpptr1, &Tail, Emsg, sizeof(Emsg));
             copy_to_end_of_dynamic_string(gpu_status, "gpu_double_bit_ecc_errors=");
             append_dynamic_string(gpu_status, EP->Val);
+            MXMLDestroyE(&EP);
             }
           }
         else
@@ -2546,6 +2557,7 @@ void generate_server_gpustatus_smi(
           MXMLFromString(&EP, dataptr, &Tail, Emsg, sizeof(Emsg));
           copy_to_end_of_dynamic_string(gpu_status, "gpu_product_name=");
           append_dynamic_string(gpu_status, EP->Val);
+          MXMLDestroyE(&EP);
           }
         else
           {
@@ -2558,6 +2570,7 @@ void generate_server_gpustatus_smi(
           MXMLFromString(&EP, dataptr, &Tail, Emsg, sizeof(Emsg));
           copy_to_end_of_dynamic_string(gpu_status, "gpu_display=");
           append_dynamic_string(gpu_status, EP->Val);
+          MXMLDestroyE(&EP);
           }
         else
           {
@@ -2570,6 +2583,7 @@ void generate_server_gpustatus_smi(
           MXMLFromString(&EP, dataptr, &Tail, Emsg, sizeof(Emsg));
           copy_to_end_of_dynamic_string(gpu_status, "gpu_pci_device_id=");
           append_dynamic_string(gpu_status, EP->Val);
+          MXMLDestroyE(&EP);
           }
         else
           {
@@ -2582,6 +2596,7 @@ void generate_server_gpustatus_smi(
           MXMLFromString(&EP, dataptr, &Tail, Emsg, sizeof(Emsg));
           copy_to_end_of_dynamic_string(gpu_status, "gpu_pci_location_id=");
           append_dynamic_string(gpu_status, EP->Val);
+          MXMLDestroyE(&EP);
           }
         else
           {
@@ -2594,6 +2609,7 @@ void generate_server_gpustatus_smi(
           MXMLFromString(&EP, dataptr, &Tail, Emsg, sizeof(Emsg));
           copy_to_end_of_dynamic_string(gpu_status, "gpu_fan_speed=");
           append_dynamic_string(gpu_status, EP->Val);
+          MXMLDestroyE(&EP);
           }
         else
           {
@@ -2607,6 +2623,7 @@ void generate_server_gpustatus_smi(
             MXMLFromString(&EP, tmpptr1, &Tail, Emsg, sizeof(Emsg));
             copy_to_end_of_dynamic_string(gpu_status, "gpu_memory_total=");
             append_dynamic_string(gpu_status, EP->Val);
+            MXMLDestroyE(&EP);
             }
           
           if ((tmpptr1 = strstr(dataptr, "<used>")) != NULL)
@@ -2614,6 +2631,7 @@ void generate_server_gpustatus_smi(
             MXMLFromString(&EP, tmpptr1, &Tail, Emsg, sizeof(Emsg));
             copy_to_end_of_dynamic_string(gpu_status, "gpu_memory_used=");
             append_dynamic_string(gpu_status, EP->Val);
+            MXMLDestroyE(&EP);
             }
           }
         else
@@ -2647,6 +2665,7 @@ void generate_server_gpustatus_smi(
             {
             nvidia_gpu_modes[gpuid] = -1;
             }
+          MXMLDestroyE(&EP);
           }
         else
           {
@@ -2661,6 +2680,7 @@ void generate_server_gpustatus_smi(
             MXMLFromString(&EP, tmpptr1, &Tail, Emsg, sizeof(Emsg));
             copy_to_end_of_dynamic_string(gpu_status, "gpu_utilization=");
             append_dynamic_string(gpu_status, EP->Val);
+            MXMLDestroyE(&EP);
             }
           
           if ((tmpptr1 = strstr(dataptr, "<memory_util>")) != NULL)
@@ -2668,6 +2688,7 @@ void generate_server_gpustatus_smi(
             MXMLFromString(&EP, tmpptr1, &Tail, Emsg, sizeof(Emsg));
             copy_to_end_of_dynamic_string(gpu_status, "gpu_memory_utilization=");
             append_dynamic_string(gpu_status, EP->Val);
+            MXMLDestroyE(&EP);
             }
           }
         else
@@ -2682,6 +2703,7 @@ void generate_server_gpustatus_smi(
             MXMLFromString(&EP, tmpptr1, &Tail, Emsg, sizeof(Emsg));
             copy_to_end_of_dynamic_string(gpu_status, "gpu_ecc_mode=");
             append_dynamic_string(gpu_status, EP->Val);
+            MXMLDestroyE(&EP);
             }
           }
         else
@@ -2699,6 +2721,7 @@ void generate_server_gpustatus_smi(
               MXMLFromString(&EP, tmpptr2, &Tail, Emsg, sizeof(Emsg));
               copy_to_end_of_dynamic_string(gpu_status, "gpu_single_bit_ecc_errors=");
               append_dynamic_string(gpu_status, EP->Val);
+              MXMLDestroyE(&EP);
               }
             
             if ((tmpptr2 = strstr(tmpptr1, "<double_bit>")) != NULL)
@@ -2707,6 +2730,7 @@ void generate_server_gpustatus_smi(
               MXMLFromString(&EP, tmpptr2, &Tail, Emsg, sizeof(Emsg));
               copy_to_end_of_dynamic_string(gpu_status, "gpu_double_bit_ecc_errors=");
               append_dynamic_string(gpu_status, EP->Val);
+              MXMLDestroyE(&EP);
               }
             }
           }
@@ -2723,6 +2747,7 @@ void generate_server_gpustatus_smi(
             MXMLFromString(&EP, tmpptr1, &Tail, Emsg, sizeof(Emsg));
             copy_to_end_of_dynamic_string(gpu_status, "gpu_temperature=");
             append_dynamic_string(gpu_status, EP->Val);
+            MXMLDestroyE(&EP);
             }
           }
         else
